--- a/exercises/MicrosoftAzure/src/api/package.json
+++ b/exercises/MicrosoftAzure/src/api/package.json
@@ -8,6 +8,7 @@
         "@sap-cloud-sdk/http-client": "^3.1.0",
         "@sap/cds": "^6.2.2",
         "@sap/xssec": "^3",
+        "cors": "^2.8.5",
         "express": "^4",
         "hdb": "^0.19.0",
         "moment": "^2.29.4",
@@ -15,6 +16,7 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.15",
         "@types/express": "^4.17.17",
         "@types/node": "^18.15.11",
         "@types/uuid": "^9.0.1",
@@ -70,8 +72,7 @@
             "SAPGENERATIVEAIHUB": {
                 "kind": "rest",
                 "credentials": {
-                    "destination": "sap-generative-ai-hub",
-                    "path": "/chat/completions?api-version=2023-05-15"
+                    "destination": "sap-generative-ai-hub"
                 }
             }
         }
